deploy/HostedPCI/objects/Payment__c.object
<CustomObject>
    <fields>
        <fullName>HostedPci_Response__c</fullName>
        <label>HostedPCI Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Credit card Token</description>
        <label>Token</label>
        <referenceTo>Token__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>address1__c</fullName>
        <label>Address Line 1:</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>address2__c</fullName>
        <label>Address Line 2:</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amount__c</fullName>
        <label>Amount:</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <label>City:</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>comment__c</fullName>
        <label>Payment Comments:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>Country:</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currency__c</fullName>
        <label>Currency:</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>merchantRefId__c</fullName>
        <label>Merchant Reference:</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>paymentProfile__c</fullName>
        <label>Payment Profile:</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>processorRefId__c</fullName>
        <label>Processor Reference ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>State / Province:</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zip__c</fullName>
        <label>Zip / Postal Code:</label>
        <length>7</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>HostedPci_Response__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>